--- a/views/find_vibes.handlebars
+++ b/views/find_vibes.handlebars
@@ -45,6 +45,7 @@
                 </button>
                 <a class="navbar-brand topnav" href="/"> Home </a>
                 <a class="navbar-brand topnav" href="#login">Login</a>
+
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -65,33 +66,7 @@
 
 
     <!-- Header -->
-    <a name="about"></a>
-    <div class="intro-header">
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="intro-message">
-                        <h1>Intern Vibes</h1>
-                        <h3>disover you internship</h3>
-                        <hr class="intro-divider">
-                        <ul class="list-inline intro-social-buttons">
-                            <li>
-                                <a href="find_vibes" class="btn btn-default btn-lg"></i> <span class="network-name">Find Vibes</span></a>
-                            </li>
-                            <li>
-                                <a href="write_vibes" class="btn btn-default btn-lg"></i> <span class="network-name">Write Vibes</span></a>
-                            </li>
-                            
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
+    
     <!-- /.intro-header -->
 
     <!-- Page Content -->
@@ -101,26 +76,32 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-5 col-sm-6">
+                <div class="col-lg-3 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">The Internship Experience: <br>As told by interns</h2>
-                    <p class="lead"> A place for interns to share their stories and feeling regarding their past internships experiances. We want people to really get a feel for what it's like to work, day in and day out, at a company.</p>
+                    <h2 class="section-heading">Find Vibes:<br>By Company</h2>
+                    <p class="lead"> </p>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/intern_comp.jpg" alt="">
+                <div class="col-lg-2 col-lg-offset-2 col-sm-4">
+                    
                 </div>
             </div>
-
         </div>
         <!-- /.container -->
+    </div>
 
+    <div class="container">
+        <button type="button" class="btn btn-primary btn-lg btn-block">Google</button>
+        <button type="button" class="btn btn-primary btn-lg btn-block">Yahoo</button>
+        <button type="button" class="btn btn-primary btn-lg btn-block">Teradata</button>
+        <button type="button" class="btn btn-primary btn-lg btn-block">Qualcomm</button>
+        <button type="button" class="btn btn-primary btn-lg btn-block">Apple</button>
     </div>
     <!-- /.content-section-a -->
 
     <!-- /.content-section-b -->
 
-    
+   
 
 	
     <!-- /.banner -->
