--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -39,6 +39,12 @@ h6 {
     background-size: cover;
 }
 
+#help {
+    font-size: 15px;
+    font-weight: 15;
+
+}
+
 .intro-message {
     position: relative;
     padding-top: 20%;
@@ -49,6 +55,26 @@ h6 {
     margin: 0;
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
     font-size: 5em;
+}
+
+.form-control-1 { 
+  padding-top: 10px;
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+       -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
 .intro-divider {
@@ -93,7 +119,7 @@ h6 {
 }
 
 .content-section-a {
-    padding: 50px 0;
+    padding: 25px 0;
     background-color: #f8f8f8;
 }
 
@@ -101,6 +127,11 @@ h6 {
     padding: 50px 0;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
+}
+
+.content-section-c {
+    padding: 0px 0;
+    background-color: #f8f8f8;
 }
 
 .section-heading {
