--- a/views/find_vibes.handlebars
+++ b/views/find_vibes.handlebars
@@ -44,18 +44,17 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand topnav" href="/"> Home </a>
-                <a class="navbar-brand topnav" href="#login">Login</a>
-
+                <a class="navbar-brand topnav" href="/help">Help</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#about">About</a>
+                        <a href="/login">Login</a>
                     </li>
                     
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a href="/FAQ">FAQ</a>
                     </li>
                 </ul>
             </div>
@@ -90,11 +89,12 @@
     </div>
 
     <div class="container">
-        <button type="button" class="btn btn-primary btn-lg btn-block">Google</button>
-        <button type="button" class="btn btn-primary btn-lg btn-block">Yahoo</button>
-        <button type="button" class="btn btn-primary btn-lg btn-block">Teradata</button>
-        <button type="button" class="btn btn-primary btn-lg btn-block">Qualcomm</button>
-        <button type="button" class="btn btn-primary btn-lg btn-block">Apple</button>
+        <a class="btn btn-primary btn-lg btn-block" href="/company" role="button">Google</a>
+        <a class="btn btn-primary btn-lg btn-block" href="/company" role="button">Yahoo</a>
+        <a class="btn btn-primary btn-lg btn-block" href="/company" role="button">Teradata</a>
+        <a class="btn btn-primary btn-lg btn-block" href="/company" role="button">Qualcomm</a>
+        <a class="btn btn-primary btn-lg btn-block" href="/company" role="button">Apple</a>
+        
     </div>
     <!-- /.content-section-a -->
 
