--- a/views/write_vibes.handlebars
+++ b/views/write_vibes.handlebars
@@ -44,18 +44,17 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand topnav" href="/"> Home </a>
-                <a class="navbar-brand topnav" href="#login">Login</a>
-
+                <a class="navbar-brand topnav" href="/Help">Help</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#about">About</a>
+                        <a href="/login">Login</a>
                     </li>
                     
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a href="/FAQ">FAQ</a>
                     </li>
                 </ul>
             </div>
@@ -98,6 +97,14 @@
         <textarea class="form-control" rows="4"></textarea>
         <h3>Work Environment:</h3>
         <textarea class="form-control" rows="4"></textarea>
+        <h6>&nbsp;</h6>
+        <select class="selectpicker">
+            <option>Google</option>
+            <option>Yahoo</option>
+            <option>Teradata</option>
+            <option>Qualcomm</option>
+            <option>Apple</option>
+        </select>
 
         <h6>&nbsp;</h6>
         <a class="btn btn-default btn-lg" href="/" role="button">Cancel</a>
@@ -125,6 +132,8 @@
     </div>
   </div>
 </div>
+
+    <h6>&nbsp;</h6>
 
     </div>
 
