--- a/views/write_vibes.handlebars
+++ b/views/write_vibes.handlebars
@@ -89,13 +89,13 @@
     </div>
 
     <div class="container">
-        <h3>Project:</h3>
+        <h3>Project: (was your project meaningful to you? what did you learn?)</h3>
         <textarea class="form-control" rows="4"></textarea>
-        <h3>Managment/Mentorship:</h3>
+        <h3>Managment/Mentorship: (who was your manager? did you learn from them?)</h3>
         <textarea class="form-control" rows="4"></textarea>
-        <h3>Team:</h3>
+        <h3>Team: (what kind of people composed your team? did you enjoy working with them?)</h3>
         <textarea class="form-control" rows="4"></textarea>
-        <h3>Work Environment:</h3>
+        <h3>Work Environment: (was your comapny relaxed or strict? did you get to choose your own schedule?)</h3>
         <textarea class="form-control" rows="4"></textarea>
         <h6>&nbsp;</h6>
         <select class="selectpicker">
