--- a/views/company.handlebars
+++ b/views/company.handlebars
@@ -64,7 +64,9 @@
     </nav>
 
 
-    <img src="cinqueterre.jpg" class="img-responsive" alt="Cinque Terre">
+    <div class="row text-center">
+        <img src="http://n-media.net/wp-content/uploads/2013/05/Web-under-construction.jpeg" class="img-responsive" alt="Cinque Terre">
+    </div>
 
 	
     <!-- /.banner -->
