--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -63,6 +63,10 @@
         <!-- /.container -->
     </nav>
 
+    <div class="row text-center">
+        <img src="http://n-media.net/wp-content/uploads/2013/05/Web-under-construction.jpeg" class="img-responsive" alt="Cinque Terre">
+    </div>
+
 
     <!-- Header -->
     
