--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -63,8 +63,11 @@
         <!-- /.container -->
     </nav>
 
+    <div class="row text-center">
+        <img src="http://n-media.net/wp-content/uploads/2013/05/Web-under-construction.jpeg" class="img-responsive" alt="Cinque Terre">
+    </div>
 
-    <img src="cinqueterre.jpg" class="img-responsive" alt="Cinque Terre">
+    
 
 	
     <!-- /.banner -->
