--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -24,8 +24,11 @@
     <div class="container">
         
     <div>
-        <h3>Added a new friend!</h3>    
-        <a href="/">Go Back</a>
+        <h3>Your Vibe Has Been Submitted!</h3>    
+        <a href="/company">View Vibes</a>
+        <div>
+        </div>
+        <a href="/">Home</a>
     </div>
 
     </div>
