--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -49,9 +49,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+                    {{#each users}}
                     <li>
-                        <a href="/login">Login</a>
+                        <a href="/login">{{usergreeting}}{{user1}}</a>
                     </li>
+                    {{/each}}
                     
                     <li>
                         <a href="/FAQ">FAQ</a>
@@ -63,8 +65,16 @@
         <!-- /.container -->
     </nav>
 
-    <div class="row text-center">
-        <img src="http://n-media.net/wp-content/uploads/2013/05/Web-under-construction.jpeg" class="img-responsive" alt="Cinque Terre">
+
+    <div>
+        <h2>&nbsp</h2>
+    </div>
+
+    <div class="container">
+    <h2>Help</h2>
+    <h3>Will be populated once we figure out what users need help with most</h3>
+    <p>to give or provide what is necessary to accomplish a task or satisfy a need; contribute strength or means to; render assistance to; cooperate effectively with; aid; assist:
+    </p>
     </div>
 
 
