--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -2569,7 +2569,7 @@ fieldset[disabled] .form-control {
   opacity: 1;
 }
 textarea.form-control {
-  height: auto;
+  height:100px auto;
 }
 input[type="search"] {
   -webkit-appearance: none;
