Tuesday working webpage

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -49,11 +49,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    {{#each users}}
+                    {{#users}}
                     <li>
                         <a href="/login">{{usergreeting}}{{user1}}</a>
                     </li>
-                    {{/each}}
+                    {{/users}}
                     
                     <li>
                         <a href="/FAQ">FAQ</a>
