--- a/views/company.handlebars
+++ b/views/company.handlebars
@@ -21,6 +21,8 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
+    <link href="css/hci-friends.css" rel="stylesheet" type="type/css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -68,14 +70,13 @@
 
     <div class="container">
         <h2>&nbsp</h2>
-        <h1> Recent [Insert Company Name] Vibes</h1>
+        <h1> Recent Vibes</h1>
     </div>
 </div>
 
-
     {{#each vibes}}
     <div class="container">
-    <div class="panel panel-default">
+    <div class="panel panel-default {{quality}}">
         <div class="panel-heading"><h2>{{name}}</h2></div>
         <div class="panel-body">
         <h4>Project:</h4>
@@ -86,6 +87,8 @@
         <p>{{team}}</p>
         <h4>Work Environment </h4>
         <p>{{workenvirontment}}</p>
+        <h4>Company</h4>
+        <p>{{company}}</p>
     </div>
     </div>
 </div>
