It's working, no headers or front page done tho

--- a/views/find_vibes.handlebars
+++ b/views/find_vibes.handlebars
@@ -66,61 +66,24 @@
     </nav>
 
 
-    {{#each friends}}
-    <div class="container">
-        <img src="{{imageURL}}" class="img-responsive" alt="Responsive image">
-        
-        <a href"#"> <h3 class="NName"> {{name}} </h3> </a>
-        <p>{{description}}</p>
-    </div>
-    {{/each}}
-
-
-    <!-- Header -->
     
-    <!-- /.intro-header -->
+	<div class="container">
 
-    <!-- Page Content -->
-
-	<a  name="services"></a>
-    <div class="content-section-c">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-sm-2">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Find Vibes:<br>By Company</h2>
-                    <p id="help">Select a company to see reviews written by interns</p>
-                    <p class="lead"> </p>
-                </div>
-                
-            </div>
-        </div>
-        <!-- /.container -->
+        <h2>&nbsp</h2>
+        <h2>Find Vibes: By Company</h2>
+        <p>Select a company to see reviews</p>
     </div>
 
     <div class="container">
-        <a class="btn btn-primary btn-lg btn-block" href="/company" role="button">Google</a>
-        <a class="btn btn-primary btn-lg btn-block" href="/company" role="button">Yahoo</a>
-        <a class="btn btn-primary btn-lg btn-block" href="/company" role="button">Teradata</a>
-        <a class="btn btn-primary btn-lg btn-block" href="/company" role="button">Qualcomm</a>
-        <a class="btn btn-primary btn-lg btn-block" href="/company" role="button">Apple</a>
+
+        <a class="btn btn-primary btn-lg btn-block" href="/company/Google" role="button">Google</a>
+        <a class="btn btn-primary btn-lg btn-block" href="/company/Yahoo" role="button">Yahoo</a>
+        <a class="btn btn-primary btn-lg btn-block" href="/company/Teradata" role="button">Teradata</a>
+        <a class="btn btn-primary btn-lg btn-block" href="/company/Qualcomm" role="button">Qualcomm</a>
+        <a class="btn btn-primary btn-lg btn-block" href="/company/Apple" role="button">Apple</a>
         
     </div>
-    <!-- /.content-section-a -->
-
-    <!-- /.content-section-b -->
-
-   
-
-	
-    <!-- /.banner -->
-
-    <!-- Footer -->
     
-
-    <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
