--- a/views/write_vibes.handlebars
+++ b/views/write_vibes.handlebars
@@ -84,19 +84,19 @@
         </div>
         <div class="form-group">
           <label for="project">Project:</label>
-          <input type="text" class="form-control" id="project" placeholder="Project" name="project">  
+          <textarea type="text" class="form-control" id="project" rows="3" placeholder="Project" name="project"></textarea> 
         </div>
         <div class="form-group">
           <label for="managment">Management:</label>
-          <input type="text" class="form-control" id="management" placeholder="Management" name="management">  
+          <textarea type="text" class="form-control" id="management" rows="3" placeholder="Management" name="management"></textarea>
         </div>
         <div class="form-group">
           <label for="team">Team:</label>
-          <input type="text" class="form-control" id="team" placeholder="Team" name="team">  
+          <textarea type="text" class="form-control" id="team" rows="3" placeholder="Team" name="team"> </textarea> 
         </div>
         <div class="form-group">
           <label for="work environment">Work Environment:</label>
-          <input type="text" class="form-control" id="workenvironment" placeholder="Work Environment" name="workenvironment">  
+          <textarea type="text" class="form-control" id="workenvironment" rows="3" placeholder="Work Environment" name="workenvironment"></textarea>
         </div>
         <div>
         <p>&nbsp;</p>
