--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -1,32 +1,101 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
 
-<html>
 <head>
-    <title>My HCI Friends</title>   
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
 
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/bootstrap-theme.css" rel="stylesheet">
-    <link href="css/hci-friends.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>InternVibes</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/landing-page.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
 </head>
 
 <body>
 
-    <div class="container">
-        
-    <div>
-        <h3>Your Vibe Has Been Submitted!</h3>    
-        <a href="/company">View Vibes</a>
-        <div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+        <div class="container topnav">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand topnav" href="/"> Home </a>
+                <a class="navbar-brand topnav" href="/help">Help</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    {{#each users}}
+                    <li>
+                        <a href="/login">{{usergreeting}}{{user1}}</a>
+                    </li>
+                    {{/each}}
+                    
+                    <li>
+                        <a href="/FAQ">FAQ</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-        <a href="/">Home</a>
+        <!-- /.container -->
+    </nav>
+
+    <div>
+        <h2>&nbsp</h2>
     </div>
 
+    <div class="container">
+        <h1>Here is the vibe you have submitted!</h1>
     </div>
-    <script src="js/jquery-1.11.0.js"></script> 
-    <script src="js/bootstrap.js"></script>
-    <script src="js/hci-friends.js"></script>
+
+    <div class="container">
+    <div class="panel panel-default {{quality}}">
+        <div class="panel-heading"><h2>{{vibes.0.name}}</h2></div>
+        <div class="panel-body">
+        <h4>Project:</h4>
+        <p>{{vibes.0.project}}</p>
+        <h4>Managment</h4>
+        <p>{{vibes.0.managment}}</p>
+        <h4>Team:</h5>
+        <p>{{vibes.0.team}}</p>
+        <h4>Work Environment </h4>
+        <p>{{vibes.0.workenvirontment}}</p>
+        <h4>Company</h4>
+        <p>{{vibes.0.company}}</p>
+    </div>
+    </div>
+</div>
+
+<div class="container">
+<ul class="nav nav-pills">
+  <li role="presentation" class="active"><a href="/">Go Home</a></li>
+  <li role="presentation"><a href="/write_vibes">Write Another Vibe</a></li>
+</ul>
+</div>
+
+    
+    <script src="js/jquery.js"></script>
+
+    <script src="js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
