--- a/views/write_vibes.handlebars
+++ b/views/write_vibes.handlebars
@@ -46,16 +46,11 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand topnav" href="/"> Home </a>
-                <a class="navbar-brand topnav" href="/Help">Help</a>
+                <a class="navbar-brand topnav" href="/Help">About</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    {{#each users}}
-                    <li>
-                        <a href="/login">{{usergreeting}}{{user1}}</a>
-                    </li>
-                    {{/each}}
                     
                     <li>
                         <a href="/FAQ">FAQ</a>
